force-app/main/default/objects/USM_Opportunity_Detail__c/USM_Opportunity_Detail__c.object-meta.xml
<CustomObject>
    <label>USM Opportunity Detail</label>
    <nameField>
        <label>USM Opportunity Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>USM Opportunity Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>