force-app/main/default/objects/USM_Opportunity_Detail__c/fields/Additonal_Nonstandard_Terms__c.field-meta.xml
<CustomField>
    <fullName>Additonal_Nonstandard_Terms__c</fullName>
    <label>Additonal Nonstandard Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>