force-app/main/default/objects/USM_Opportunity_Detail__c/fields/Do_you_have_an_approved_T_T_price_book__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_an_approved_T_T_price_book__c</fullName>
    <label>Do you have an approved T&amp;T price book?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>