force-app/main/default/objects/USM_Opportunity_Detail__c/fields/Expected_Total_Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Expected_Total_Service_Contract__c</fullName>
    <label>Expected Total Service Contract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>