force-app/main/default/objects/USM_Opportunity_Detail__c/fields/Is_customer_Direct_or_Channel__c.field-meta.xml
<CustomField>
    <fullName>Is_customer_Direct_or_Channel__c</fullName>
    <label>Is customer Direct or Channel?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NCR Direct</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>