force-app/main/default/objects/USM_Opportunity_Detail__c/fields/Is_customer_requesting_On_Premise__c.field-meta.xml
<CustomField>
    <fullName>Is_customer_requesting_On_Premise__c</fullName>
    <label>Is customer requesting On Premise?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>