force-app/main/default/objects/USM_Opportunity_Detail__c/fields/Is_in_country_location_required__c.field-meta.xml
<CustomField>
    <fullName>Is_in_country_location_required__c</fullName>
    <label>Is in-country location required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>