force-app/main/default/objects/USM_Opportunity_Detail__c/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer lost to competitor</fullName>
            </value>
            <value>
                <fullName>NCR lost to competitor</fullName>
            </value>
            <value>
                <fullName>Project/opportunity put on hold by Customer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>