force-app/main/default/objects/USM_Opportunity_Detail__c/fields/Multi_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Multi_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-Vendor</label>
    <type>Checkbox</type>
</CustomField>