force-app/main/default/objects/USM_Opportunity_Detail__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TERADATA CORPORATION</fullName>
            </value>
            <value>
                <fullName>Tintri</fullName>
            </value>
            <value>
                <fullName>T-Mobile</fullName>
            </value>
            <value>
                <fullName>Toshiba</fullName>
            </value>
            <value>
                <fullName>Total Fluides</fullName>
            </value>
            <value>
                <fullName>TOTAL RN</fullName>
            </value>
            <value>
                <fullName>TRA</fullName>
            </value>
            <value>
                <fullName>TURK TELEKOM</fullName>
            </value>
            <value>
                <fullName>TURKCELL ILETISIM HIZM. A.S.</fullName>
            </value>
            <value>
                <fullName>UNE</fullName>
            </value>
            <value>
                <fullName>Uniadex</fullName>
            </value>
            <value>
                <fullName>Unify</fullName>
            </value>
            <value>
                <fullName>UNILEVER</fullName>
            </value>
            <value>
                <fullName>VeloCloud Networks, Inc.</fullName>
            </value>
            <value>
                <fullName>VERITAS</fullName>
            </value>
            <value>
                <fullName>Verizon</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>VIVA KW</fullName>
            </value>
            <value>
                <fullName>VMWARE INC.</fullName>
            </value>
            <value>
                <fullName>Vodafone</fullName>
            </value>
            <value>
                <fullName>Vodatel Networks</fullName>
            </value>
            <value>
                <fullName>VODATEL NETWORKS (H.K.) LIMITED</fullName>
            </value>
            <value>
                <fullName>Walmart</fullName>
            </value>
            <value>
                <fullName>Westcon</fullName>
            </value>
            <value>
                <fullName>WEZENN</fullName>
            </value>
            <value>
                <fullName>WIPRO</fullName>
            </value>
            <value>
                <fullName>XEROX CORPORATION</fullName>
            </value>
            <value>
                <fullName>XS International</fullName>
            </value>
            <value>
                <fullName>Yum</fullName>
            </value>
            <value>
                <fullName>Zain Telecom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>