force-app/main/default/objects/USM_Opportunity_Detail__c/fields/Supported_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Supported_Equipment__c</fullName>
    <label>Supported Equipment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>