force-app/main/default/objects/USM_Opportunity_Detail__c/fields/What_is_the_HW_configuration__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_HW_configuration__c</fullName>
    <label>What is the HW configuration?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MV/ITM/Total Premise/Other</fullName>
            </value>
            <value>
                <fullName>Self Serv/SSCO/NCR POS</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>