force-app/main/default/objects/USM_Opportunity_Detail__c/fields/Will_this_be_added_to_existing_contract__c.field-meta.xml
<CustomField>
    <fullName>Will_this_be_added_to_existing_contract__c</fullName>
    <label>Will this be added to existing contract?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>